--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -37,6 +37,19 @@
           }
         }
       }
+    },
+    {
+      "label": "Start",
+      "type": "shell",
+      "command": "cd drupal_project",
+      "problemMatcher": []
+    },
+    {
+      "label": "RunBuild",
+      "type": "shell",
+      "command": "ng serve",
+      "problemMatcher": [],
+      "dependsOn": "Start"
     }
   ]
 }
