--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
+    "three": "^0.158.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -30,6 +32,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.8",
     "@types/jquery": "^3.5.27",
+    "@types/three": "^0.158.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
