--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "types": ["jquery"],
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
